[package]
name = "abrupt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
fastrand = "2.3.0"
base64 = "0.22.1"
sha2 = "0.10.8"
hex = "0.4.3"
md-5 = "0.10.6"
aes = "0.8.4"
cbc = "0.1.2"
rsa = { version = "0.9.8", features = ["pem"] }
rand = "0.8.5"
